# ca-dmv-rag-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/: rate_limit.db
data/eval/: questions.json
data/processed/: chunks.jsonl
docs/: ARCHITECTURE.md  DEPLOY.md  ROADMAP.md  SETUP_AND_PROCESS.md  architecture.mmd
notebooks/: evaluation_inspection.ipynb  generation_inspection.ipynb  ingestion_inspection.ipynb  retrieval_inspection.ipynb
scripts/: append_index.py  ask.py  build_chunks.py  build_index.py  clean.sh  query_demo.py  render_start.sh  run_api.sh  run_build_and_ask.sh  run_eval.py
src/: __init__.py
src/api/: main.py
src/config/: settings.py
src/evaluation/: __init__.py  metrics.py
src/generation/: __init__.py  answer.py  prompts.py
src/ingestion/: __init__.py  chunker.py  clean_text.py  pdf_loader.py
src/retrieval/: __init__.py  embed.py  reranker.py  retriever.py  vector_store.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_evaluation.py  test_generation.py  test_ingestion.py  test_retrieval.py
