[project]
name = "ca-dmv-rag-system"
version = "0.1.0"
description = "RAG over the California DMV Driver Handbook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.28.0",
    "watchdog>=3.0.0",
    "nltk>=3.8.0",
    "rouge-score>=0.1.2",
]

[tool.pytest.ini_options]
# Keep pytest.ini as source of truth; this only sets testpaths if not in pytest.ini
testpaths = ["tests"]
